--- a/Web/BDAProject.Web/Views/Blog/All.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/All.cshtml
@@ -15,6 +15,7 @@
                         <th scope="col">Username</th>
                         <th scope="col">Post</th>
                         <th scope="col">CreatedOn</th>
+                        <th scope="col">Likes</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -27,7 +28,7 @@
                         <td>@item.CreatedOn</td>
                         <td>
                             <div class="button-holder">
-                                <a href="/All/Add" class="btn btn-info text-uppercase">Info</a>
+                                <a href="/All/Add" class="btn btn-info text-uppercase">Like</a>
                             </div>
                         </td>
                     </tr>
