--- a/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
@@ -133,6 +133,16 @@
                             <h1 text-light>Register</h1>
                             <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></span> <span>Register</span></p>
                         }
+                        else if (ViewData["Title"].ToString() == "All")
+                        {
+                            <h1 text-light>Blog</h1>
+                            <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></span> <span>Blog</span></p>
+                        }
+                        else if (ViewData["Title"].ToString() == "Add")
+                        {
+                            <h1 text-light>Add Post</h1>
+                            <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Blog" asp-action="All">Blog</a></span> <span>Add Post</span></p>
+                        }
 
                     </div>
                 </div>
