--- a/Web/BDAProject.Web/Views/Blog/All.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/All.cshtml
@@ -15,25 +15,26 @@
                         <th scope="col">Username</th>
                         <th scope="col">Post</th>
                         <th scope="col">CreatedOn</th>
-                        <th scope="col">Likes</th>
+                        <th scope="col">Info</th>
                     </tr>
                 </thead>
                 <tbody>
 
-                    @foreach (var item in Model)
-                     {
-                    <tr>
+                   @foreach (var item in Model)
+                    {
+                      <tr>
                         <th scope="row">@item.UserName</th>
                         <td>@item.Text</td>
                         <td>@item.CreatedOn</td>
                         <td>
-                            <div class="button-holder">
-                                <a href="/All/Add" class="btn btn-info text-uppercase">Like</a>
-                            </div>
+                            <form asp-controller="Blog" asp-action="All" method="post">
+                                <input type="hidden" name="postId" value="@item.Id" />
+                                <input type="submit" class="btn btn-outline-primary" value="Like" />
+                            </form>
                         </td>
-                    </tr>
-                     }
-                    </tbody>
+                      </tr>
+                    }
+                </tbody>
             </table>
         </div>
     </div>
