--- a/Web/BDAProject.Web/Views/Blog/All.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/All.cshtml
@@ -6,7 +6,7 @@
     <div class="container">
         <h1 style="margin: 2%; text-align: center;">All Posts</h1>
         <div style="margin: 2%; text-align: center;">
-            <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Add"><strong>Add Post</strong></a>
+            <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="AddPost"><strong>Add Post</strong></a>
         </div>
         <div style="padding: 5%;">
             <table class="table">
