--- a/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
@@ -138,7 +138,7 @@
                             <h1 text-light>Blog</h1>
                             <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></span> <span>Blog</span></p>
                         }
-                        else if (ViewData["Title"].ToString() == "Add")
+                        else if (ViewData["Title"].ToString() == "AddPost")
                         {
                             <h1 text-light>Add Post</h1>
                             <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Blog" asp-action="All">Blog</a></span> <span>Add Post</span></p>
