--- a/Web/BDAProject.Web/Areas/Administration/Views/Dashboard/Index.cshtml
+++ b/Web/BDAProject.Web/Areas/Administration/Views/Dashboard/Index.cshtml
@@ -1,7 +1,9 @@
-﻿@model BDAProject.Web.ViewModels.Administration.Dashboard.IndexViewModel
-@{
+﻿@{
     this.ViewData["Title"] = "Admin dashboard";
 }
 
 <h1>@this.ViewData["Title"]</h1>
-Settings: @this.Model.SettingsCount
+
+<div style="margin: 2%; text-align: center;">
+    <a class="nav-link text-dark" asp-area="" asp-controller="Blog" asp-action="Blog"><strong>Add Post to Blog</strong></a>
+</div>
