--- a/Web/BDAProject.Web/Views/Blog/Blog.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/Blog.cshtml
@@ -10,6 +10,12 @@
                 <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in</p>
             </div>
         </div>
+        @if (this.User.Identity.Name == "maria@abv.bg")
+        {
+            <div style="margin: 2%; text-align: center;">
+                <a class="nav-link text-dark" asp-area="Administration" asp-controller="BlogAdmin" asp-action="AddAdminPost"><strong>Add Post to Blog</strong></a>
+            </div>
+        }
         <div class="row">
             <div class="col-md-4 ftco-animate">
                 <div class="blog-entry">
