--- a/Web/BDAProject.Web/Views/Blog/Blog.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/Blog.cshtml
@@ -16,115 +16,29 @@
                 <a class="nav-link text-dark" asp-area="Administration" asp-controller="BlogAdmin" asp-action="AddAdminPost"><strong>Add Post to Blog</strong></a>
             </div>
         }
-        <div class="row">
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry">
-                    <img src="~/images/image_1.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_1.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry" data-aos-delay="100">
-                    <img src="~/images/image_2.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_2.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
+
+        @foreach (var item in Model)
+        {
+            <div class="row">
+                <div class="col-md-4 ftco-animate">
+                    <div class="blog-entry">
+                        <img src="~/images/@item.ImageName" class="img-fluid" alt="Colorlib Template">
+                        <a href="~/images/@item.ImageName" class="icon image-popup d-flex justify-content-center align-items-center">
+                            <span class="icon-expand"></span>
+                        </a>
+                        <div class="text d-flex py-4">
+                            <div class="meta mb-3">
+                                <div><a href="#">@item.CreatedOn</a></div>
+                                <div><a href="#">Admin</a></div>
+                                <div><a href="#" class="meta-chat"><span class="icon-chat"></span>@item.BlogComments.Count</a></div>
+                            </div>
+                            <div class="desc pl-3">
+                                <h3 class="heading"><a href="#">@item.Text</a></h3>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry" data-aos-delay="200">
-                    <img src="~/images/image_3.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_3.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry">
-                    <img src="~/images/image_4.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_4.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry" data-aos-delay="100">
-                    <img src="~/images/image_5.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_5.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-md-4 ftco-animate">
-                <div class="blog-entry" data-aos-delay="200">
-                    <img src="~/images/image_6.jpg" class="img-fluid" alt="Colorlib Template">
-                    <a href="~/images/image_6.jpg" class="icon image-popup d-flex justify-content-center align-items-center">
-                        <span class="icon-expand"></span>
-                    </a>
-                    <div class="text d-flex py-4">
-                        <div class="meta mb-3">
-                            <div><a href="#">Sep. 20, 2018</a></div>
-                            <div><a href="#">Admin</a></div>
-                            <div><a href="#" class="meta-chat"><span class="icon-chat"></span> 3</a></div>
-                        </div>
-                        <div class="desc pl-3">
-                            <h3 class="heading"><a href="#">Even the all-powerful Pointing has no control about the blind texts</a></h3>
-                        </div>
-                    </div>
-                </div>
-            </div>
+        }
         </div>
-    </div>
 </section>
