--- a/Web/BDAProject.Web/Views/Blog/Blog.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/Blog.cshtml
@@ -31,6 +31,7 @@
                                 <div><a href="#">@item.CreatedOn</a></div>
                                 <div><a href="#">Admin</a></div>
                                 <div><a href="#" class="meta-chat"><span class="icon-chat"></span>@item.BlogComments.Count</a></div>
+                                <div><a href="#" class="meta-like"><span class="icon-thumbs-up"></span>@item.BlogLikes.Count</a></div>
                             </div>
                             <div class="desc pl-3">
                                 <h3 class="heading"><a href="#">@item.Text</a></h3>
