--- a/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
+++ b/Web/BDAProject.Web/Views/Shared/_Layout.cshtml
@@ -150,6 +150,11 @@
                             <h1 text-light>Add Comment</h1>
                             <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Forum" asp-action="All">Forum</a></span> <span>Add Comment</span></p>
                         }
+                        else if (ViewData["Title"].ToString() == "Blog")
+                        {
+                            <h1 text-light>Blog</h1>
+                            <p class="breadcrumbs"><span class="mr-2"><a asp-area="" asp-controller="Home" asp-action="Index">Home</a></span> <span>Blog</span></p>
+                        }
 
                     </div>
                 </div>
