--- a/Web/BDAProject.Web/Views/Blog/Blog.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/Blog.cshtml
@@ -30,12 +30,16 @@
                             <div class="meta mb-3">
                                 <div><a href="#">@item.CreatedOn</a></div>
                                 <div><a href="#">Admin</a></div>
-                                <div><a href="#" class="meta-chat"><span class="icon-chat"></span>@item.BlogComments.Count</a></div>
                                 <div><a href="#" class="meta-like"><span class="icon-thumbs-up"></span>@item.BlogLikes.Count</a></div>
+                                <div><a href="#" class="meta-chat"><span class="icon-chat"></span>@item.BlogComments.Count</a></div>
                             </div>
                             <div class="desc pl-3">
                                 <h3 class="heading"><a href="#">@item.Text</a></h3>
                             </div>
+                            <form asp-controller="Blog" asp-action="Blog" method="post">
+                                <input type="hidden" name="blogPostId" value="@item.Id" />
+                                <input type="submit" class="btn btn-outline-primary" value="Like" />
+                            </form>
                         </div>
                     </div>
                 </div>
