--- a/Web/BDAProject.Web/Views/Blog/AddBlogComment.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/AddBlogComment.cshtml
@@ -8,7 +8,7 @@
         <div style="padding: 5%;">
             <form method="post">
                 <div class="form-group">
-                    <textarea name="CommentText" id="CommentText" cols="30" rows="7" class="form-control" placeholder="Text"></textarea>
+                    <textarea name="CommentText" id="CommentText" required cols="30" rows="7" class="form-control" placeholder="Text"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary text-uppercase">Submit</button>
             </form>
