--- a/Web/BDAProject.Web/Views/Forum/AddPost.cshtml
+++ b/Web/BDAProject.Web/Views/Forum/AddPost.cshtml
@@ -13,7 +13,7 @@
                 </div>*@
                 <input type="hidden" name="Id" value="Id" />
                 <div class="form-group">
-                    <textarea name="Text" id="Text" cols="30" rows="7" class="form-control" placeholder="Text"></textarea>
+                    <textarea name="Text" id="Text" required cols="30" rows="7" class="form-control" placeholder="Text"></textarea>
                 </div>
                 <button type="submit" class="btn btn-primary text-uppercase">Submit</button>
             </form>
