--- a/Web/BDAProject.Web/Views/Contact/Contact.cshtml
+++ b/Web/BDAProject.Web/Views/Contact/Contact.cshtml
@@ -29,13 +29,13 @@
                         <input type="text" class="form-control" id="Name" name="Name" placeholder="Name">
                     </div>
                     <div class="form-group">
-                        <input type="text" class="form-control" id="Email" name="Email" placeholder="Email">
+                        <input type="text" class="form-control" id="Email" name="Email" required placeholder="Email">
                     </div>
                     <div class="form-group">
                         <input type="text" class="form-control" id="Subject" name="Subject" placeholder="Subject">
                     </div>
                     <div class="form-group">
-                        <textarea name="Message" id="Message" cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
+                        <textarea name="Message" id="Message" required cols="30" rows="7" class="form-control" placeholder="Message"></textarea>
                     </div>
                     <div class="form-group">
                         <input type="submit" value="Send Message" class="btn btn-primary py-3 px-5">
