--- a/Web/BDAProject.Web/Views/Forum/EditPost.cshtml
+++ b/Web/BDAProject.Web/Views/Forum/EditPost.cshtml
@@ -8,7 +8,7 @@
         <div style="padding: 5%;">
             <form method="post">
                 <div class="form-group">
-                    <textarea name="Text" id="Text" cols="30" rows="7" class="form-control" placeholder="@Model.Text">@Model.Text</textarea>
+                   <textarea name="Text" id="Text" required cols="30" rows="7" class="form-control" placeholder="">@Model.Text</textarea>
                 </div>
                 <button type="submit" class="btn btn-primary text-uppercase">Submit</button>
             </form>
