--- a/Web/BDAProject.Web/Views/Blog/DeleteBlogPost.cshtml
+++ b/Web/BDAProject.Web/Views/Blog/DeleteBlogPost.cshtml
@@ -5,14 +5,16 @@
 <hr />
 <h2 class="mb-4">Are you sure you want to DELETE this post?</h2>
 <hr />
-<div class="button-holder">
-    <a href="/Blog/Blog" class="btn">Cancel</a>
-</div>
-@*<div class="button-holder">
-    <a href="/Blog/DeleteBlogPost?blogPostId" class="btn btn-danger">Delete</a>
-</div>*@
 
-<form method="post">
-    <button type="submit" class="btn btn-danger">Delete</button>
-</form>
+<div class="row">
+    <div class="button-holder">
+        <a href="/Blog/Blog" class="btn">Cancel</a>
+    </div>
+    <div>
+
+    </div>
+    <form method="post">
+        <button type="submit" class="btn btn-danger">Delete</button>
+    </form>
+</div>
 
